    - properly considers minecarts assigned to routes busy.
    - code for deducing job outputs rewritten in lua for flexibility.
    - logic fix: collecting webs produces silk, and ungathered webs are not thread.
    - items assigned to squads are considered busy, even if not in inventory.
    - shearing and milking jobs are supported, but only with generic MILK or YARN outputs.
  New Fix Armory plugin:
    Together with a couple of binary patches and the gui/assign-rack script,
    this plugin makes weapon racks, armor stands, chests and cabinets in
    properly designated barracks be used again for storage of squad equipment.
  New Search plugin by falconne:
    Adds an incremental search function to the Stocks, Trading, Stockpile and Unit List screens.
  New AutoMaterial plugin by falconne:
    Makes building constructions (walls, floors, fortifications, etc) a little bit easier by
    saving you from having to trawl through long lists of materials each time you place one.
  Dfusion plugin:
    Reworked to make use of lua modules, now all the scripts can be used from other scripts.

DFHack v0.34.11-r2

  Internals:
    - full support for Mac OS X.
    - a plugin that adds scripting in ruby.
    - support for interposing virtual methods in DF from C++ plugins.
    - support for creating new interface screens from C++ and lua.
    - added various other API functions.
  Notable bugfixes:
    - better terminal reset after exit on linux.
    - seedwatch now works on reclaim.
    - the sort plugin won't crash on cages anymore.
  Misc improvements:
    - autodump: can move items to any walkable tile, not just floors.
    - stripcaged: by default keep armor, new dumparmor option.
    - zone: allow non-domesticated birds in nestboxes.
    - workflow: quality range in constraints.
    - cleanplants: new command to remove rain water from plants.
    - liquids: can paint permaflow, i.e. what makes rivers power water wheels.