@@ -43,6 +43,7 @@ DFHack future
     - logic fix: collecting webs produces silk, and ungathered webs are not thread.
     - items assigned to squads are considered busy, even if not in inventory.
     - shearing and milking jobs are supported, but only with generic MILK or YARN outputs.
+    - workflow announces when the stock level gets very low once a season.
   New Fix Armory plugin:
     Together with a couple of binary patches and the gui/assign-rack script,
     this plugin makes weapon racks, armor stands, chests and cabinets in
